2015-03-23  Tim Horton  <timothy_horton@apple.com>

        Add a share item to the link action menu
        https://bugs.webkit.org/show_bug.cgi?id=142961
        <rdar://problem/19198374>

        Reviewed by Beth Dakin.

        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController _hitLinkURL]):
        Factor out _hitLinkURL from various places.

        (-[WKActionMenuController _openURLFromActionMenu:]):
        (-[WKActionMenuController _addToReadingListFromActionMenu:]):
        (-[WKActionMenuController _defaultMenuItemsForVideo]):
        (-[WKActionMenuController _defaultMenuItemsForImage]):
        (-[WKActionMenuController _createActionMenuItemForTag:]):
        (-[WKActionMenuController _createShareActionMenuItemForTag:withItems:]):
        Adopt -[NSMenuItem standardShareMenuItemWithItems].
        All of the null-checking is unnecessary as it's impossible to enter
        these functions with a null image/etc.

        (-[WKActionMenuController _defaultMenuItemsForLink]):
        * Shared/API/c/WKActionMenuItemTypes.h:
        Add a 'Share' item to the link menu.

2015-03-23  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Use std::abs() in ClickCounter::currentClickCountForGdkButtonEvent()
        https://bugs.webkit.org/show_bug.cgi?id=142964

        Reviewed by Carlos Garcia Campos.

        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (ClickCounter::currentClickCountForGdkButtonEvent): Use the STL's std::abs()
        instead of C's abs(). The templated nature of std::abs() ensures the proper
        computation that matches the types of the passed-in values, and shuts down
        a warning when compiling with Clang.

2015-03-23  Zan Dobersek  <zdobersek@igalia.com>

        [GTK][WK2] webkitBackForwardListChanged() should operate on a Vector reference
        https://bugs.webkit.org/show_bug.cgi?id=142963

        Reviewed by Carlos Garcia Campos.

        * UIProcess/API/gtk/WebKitBackForwardList.cpp: